--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <!--Fim do Texto-->
                                 <div class="col-md-4">
                                     <figure class="redes-sociais">
-                                        <a href="#"><img src="im" alt=""></a>
+                                        <a href="#"><img src="img/face.png" alt=""></a>
                                     </figure>
 
                                 </div>
