--- a/index.html
+++ b/index.html
@@ -188,6 +188,37 @@
                         <img src="img/painel-super-mario-bros.jpg" class="img-fluid" alt="img-galeria">
                     </div>
                     <!-- Fim da imagem 12 da galeria-->
+                        <footer class="rodape">
+                            <div class="container">
+                                <div class="row m-0">
+                                    <!--Início do logo-->
+                                    <div class="col-md-4">
+                                        <figure>
+                                            <img src="img/senai_small.jpg" alt="logo-rodape" width="40%">
+                                        </figure>
+                                    </div>
+                                    <!--Fim do logo-->
+                                    <!--Início do texto-->
+                                    <div class="col-md-4">
+                                        <div class="info-contato">
+                                            <p>Email:</p>
+                                            <p>example@vault.com</p><br>
+                                            <p>Endereço:</p>
+                                            <p>Avenida ABC - 123</p><br>
+                                            <p>Telefone:</p>
+                                            <p>+551199255635</p><br>                                            
+                                        </div>
+                                    </div>
+                                    <!--Fim do Texto-->
+                                    <div class="col-md-4">
+                                        <figure class="redes-sociais">
+                                            <a href="#"><img src="img/" alt=""></a>
+                                        </figure>
+
+                                    </div>
+                                </div>
+                            </div>
+                        </footer>
                 </div>
             </div>
         </div>
