Final do texto da galeria

--- a/index.html
+++ b/index.html
@@ -210,15 +210,36 @@
                                     </div>
                                 </div>
                                 <!--Fim do Texto-->
+                                <!--Alt + Shift + Seta para baixo copia e cola imediato-->
+                                <!--Crtl + Espaço mostra o caminho do arquivo em src-->
+
+                                <!--Início das mídias sociais-->
                                 <div class="col-md-4">
                                     <figure class="redes-sociais">
                                         <a href="#"><img src="img/face.png" alt=""></a>
+                                        <a href="#"><img src="img/insta.png""></a>
+                                        <a href="#"><img src="img/youtube.png" alt=""></a>
+                                        <a href="#"><img src="img/linkedin.png" alt=""></a>
                                     </figure>
-
+                                
+                                    <br>
+                                    <a href="#">jogos</a><br>
+                                    <a href="#">hardware</a><br>
+                                    <a href="#">celulares</a><br>
+                                    <a href="#">pc-game</a><br>
+                                    <a href="#">contato</a><br>
+                                    <a href="#">login</a><br>
                                 </div>
+                                <!--Fim das mídias sociais-->
+                                <!--Início dos direitos autorais-->
+                                <div class="col-12">
+                                    <p class="direitos">Direitos Autorais</p>
+                                </div>
+                                <!--Fim dos direitos autorais-->
                             </div>
                         </div>
                     </footer>
+                    <!--Fim do Texto da Galeria-->
                 </div>
             </div>
         </div>
