--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 <div class="col-md-4">
                                     <figure class="redes-sociais">
                                         <a href="#"><img src="img/face.png" alt=""></a>
-                                        <a href="#"><img src="img/insta.png""></a>
+                                        <a href="#"><img src="img/insta.png" alt=""></a>
                                         <a href="#"><img src="img/youtube.png" alt=""></a>
                                         <a href="#"><img src="img/linkedin.png" alt=""></a>
                                     </figure>
