--- a/index copy.html
+++ b/index copy.html
@@ -10,53 +10,22 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-    <header>
-        <!--<nav class="menu_top">
-            <img class="img-logo" src="img/senai_final.jpg" alt="Logo Senai">
-            <ul class="menu">
-                <a class="linkMenu" href="jogos.html">Jogos</a>
-                <a class="linkMenu" href="hardware.html">Hardware</a>
-                <a class="linkMenu" href="celulares.html">Celulares</a>
-                <a class="linkMenu" href="pc-game.html">PC Gamer</a>
-                <a class="linkMenu" href="contato.html">Contato</a>
-                <a class="linkMenu login" href="login.html">Login</a>
+    <header id="header">
+        <a id="logo" href="index.html"><img src="img/senai_small.jpg" alt="Logo Senai"></a>
+            <nav id="nav">
+                <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu
+                    <span id="hamburger"></span>
+                </button>
+            <ul id="menu" role="menu">
+                <li><a class="linkMenu" href="jogos.html">Jogos</a></li>
+                <li><a class="linkMenu" href="hardware.html">Hardware</a></li>
+                <li><a class="linkMenu" href="celulares.html">Celulares</a></li>
+                <li><a class="linkMenu" href="pc-game.html">PC Gamer</a></li>
+                <li><a class="linkMenu" href="contato.html">Contato</a></li>
+                <li><a class="linkMenu login" href="login.html">Login</a></li>
             </ul>
            
-        </nav>-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img class="img-logo" src="img/senai_final.jpg" alt="Logo Senai"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav col-me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="jogos.html">Jogos</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="hardware.html">Hardware</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="celulares.html">Celulares</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="pc-game.html">PC Gamer</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="contato.html">Contato</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="login.html">Login</a>
-                  </li>
-                  
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </nav>
+        </nav>
     </header>
 
         <div class="section-banner-home">
