--- a/index.html
+++ b/index.html
@@ -12,16 +12,19 @@
     <link rel="stylesheet" href="">
 </head>
 <body>
-    <header>
-        <nav class="menu_top">
-            <img class="img-logo" src="img/senai_final.jpg" alt="Logo Senai">
-            <ul class="menu">
-                <a class="linkMenu" href="jogos.html">Jogos</a>
-                <a class="linkMenu" href="hardware.html">Hardware</a>
-                <a class="linkMenu" href="celulares.html">Celulares</a>
-                <a class="linkMenu" href="pc-game.html">PC Gamer</a>
-                <a class="linkMenu" href="contato.html">Contato</a>
-                <a class="linkMenu login" href="login.html">Login</a>
+    <header id="header">
+        <a id="logo" href="index.html"><img src="img/senai_small.jpg" alt="Logo Senai"></a>
+            <nav id="nav">
+                <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">Menu
+                    <span id="hamburger"></span>
+                </button>
+            <ul id="menu" role="menu">
+                <li><a class="linkMenu" href="jogos.html">Jogos</a></li>
+                <li><a class="linkMenu" href="hardware.html">Hardware</a></li>
+                <li><a class="linkMenu" href="celulares.html">Celulares</a></li>
+                <li><a class="linkMenu" href="pc-game.html">PC Gamer</a></li>
+                <li><a class="linkMenu" href="contato.html">Contato</a></li>
+                <li><a class="linkMenu login" href="login.html">Login</a></li>
             </ul>
            
         </nav>
