--- a/index.html
+++ b/index.html
@@ -271,5 +271,5 @@
         </div>
 </body>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/script_menu.js"></script>
 </html>
